Convert and inspect

--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -25,22 +25,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 1.  2.  3.  4.  5.  6.  7.  8.  9. 10.]\n",
-      "[[nan nan nan nan nan]\n",
-      " [nan 22. nan nan nan]\n",
-      " [nan 25. nan nan nan]\n",
-      " [nan 30. nan nan nan]\n",
-      " [nan 27. nan nan nan]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "textfile = np.loadtxt('text.txt', delimiter='-')\n",
     "print(textfile)\n",
@@ -84,20 +71,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1, 2, 3, 4, 5])"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "arr1 = np.array([1,2,3,4,5])\n",
     "arr1"
@@ -112,21 +88,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1, 2, 3],\n",
-       "       [4, 5, 6]])"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "arr2= np.array([(1,2,3),(4,5,6)])\n",
     "arr2"
@@ -161,6 +125,62 @@
    "metadata": {},
    "source": [
     "## Useful array Creator Commands"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr4 = np.zeros((2,3)) # Inside tuple No of memebers shows the desired dimensions\n",
+    "print(arr4)\n",
+    "\n",
+    "arr5=np.ones((2,2,2))\n",
+    "print(arr5)\n",
+    "\n",
+    "arr6 = np.eye(4)  # I (identity) Matrix\n",
+    "print(arr6)\n",
+    "\n",
+    "arr7 = np.linspace(0,20,5) #(i,f,No)\n",
+    "print(arr7)\n",
+    "\n",
+    "arr8 = np.arange(0,20,4) #(i,f,step)\n",
+    "print(arr8)\n",
+    "\n",
+    "arr9 = np.full((2,3),7)  # ((DIMENSIONS), Desired Value)\n",
+    "print(arr9)\n",
+    "\n",
+    "arr10 = np.random.rand(4,5)\n",
+    "print(arr10)\n",
+    "\n",
+    "arr11 = np.random.randint(9, size=(2,2,2))\n",
+    "print(arr11)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Converting and Inspecting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(arr11.size)\n",
+    "print(arr11.shape)\n",
+    "print(arr11.dtype)\n",
+    "arr12 = arr11.astype(float)\n",
+    "print(arr12)\n",
+    "list1 = arr11.tolist()\n",
+    "print(list1)\n",
+    "\n",
+    "\n",
+    "np.info(np.random)"
    ]
   }
  ],
