Add remvove and split

--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -182,6 +182,53 @@
     "\n",
     "np.info(np.random)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Copy, Sort and Reshape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr13 = arr11.copy()\n",
+    "# or\n",
+    "arr13 = np.copy(arr11)\n",
+    "arr14 = arr13.sort(axis=0) # 0 is for row and 1 is for column\n",
+    "print(arr14)\n",
+    "\n",
+    "arr_flatten = arr13.flatten()\n",
+    "arr_transpose = arr13.T\n",
+    "\n",
+    "print(arr_flatten)\n",
+    "print(arr_transpose)\n",
+    "\n",
+    "arr15  = arr13.reshape(4,2)  # size should be same \n",
+    "print(arr15)\n",
+    "\n",
+    "arr16 = np.resize(arr13,(10,10))  # size can be diffrent\n",
+    "print(arr16)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Add, Remove, Combine, Split "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
