index and slice

--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -228,6 +228,43 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "arr17 = arr1.copy()\n",
+    "print(arr17)\n",
+    "\n",
+    "arr18 = np.append(arr17,[20,30,40])\n",
+    "print(arr18)\n",
+    "\n",
+    "arr19= np.insert(arr17,3,[10,20])\n",
+    "print(arr19)\n",
+    "\n",
+    "arr20 = np.delete(arr19,5,axis=0) #  in a 2d array it delets wntire row, for Column Deletation use axis = 1\n",
+    "print(arr20)\n",
+    "\n",
+    "\n",
+    "\n",
+    "arr21= np.concatenate((arr20,arr19),axis=0) # Or axis =1 for column-wise adding\n",
+    "print(arr21)\n",
+    "\n",
+    "arr22= np.split(arr13, 2)  \n",
+    "arr23 = np.hsplit(arr13, 2)\n",
+    "\n",
+    "print(arr22)\n",
+    "print(arr23)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Indexing & Slicing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
