--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -265,7 +265,60 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "arr24 = np.array([(1,2,3),(4,5,6)])\n",
+    "print(arr24)\n",
+    "\n",
+    "print(arr24[1,2])\n",
+    "\n",
+    "arr24[0,0]=10\n",
+    "print(arr24)\n",
+    "\n",
+    "print(arr24[:1])\n",
+    "\n",
+    "print(arr24<3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Math and Statistics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr25=np.array([1,2,3,4,5])\n",
+    "print(arr25)\n",
+    "\n",
+    "arr26= np.add(arr25,2)\n",
+    "print(arr26)\n",
+    "\n",
+    "arr27= np.subtract(arr25,2)\n",
+    "print(arr27)\n",
+    "\n",
+    "arr28= np.multiply(arr25,2)\n",
+    "print(arr28)\n",
+    "\n",
+    "arr29= np.divide(arr25,2)\n",
+    "print(arr29)\n",
+    "\n",
+    "arr30= np.power(arr25,2)\n",
+    "print(arr30)\n",
+    "\n",
+    "\n",
+    "print(np.mean(arr25))\n",
+    "print(np.max(arr25,axis=0))\n",
+    "print(np.std(arr25,axis=0))\n",
+    "print(np.sum(arr25,axis=0))\n",
+    "\n",
+    "\n",
+    "# For matrix Multiplication use np.dot(A,B)\n"
+   ]
   }
  ],
  "metadata": {
